--- a/main.html
+++ b/main.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Your Website Title</title>
+        <title>SixtiethWorm</title>
     </head>
     <body>
         <header>
@@ -22,7 +22,7 @@
             </section>
         </main>
         <footer>
-            <p>Copyright © 2024 Your Name</p>
+            <p>Copyright © 2024 Edoardo De Celis</p>
         </footer>
     </body>
 </html>
