--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Your Vlog Page</title>
+    <title>My Vlog Page</title>
     <style>
         /* Add your CSS styles here */
     </style>
