--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </header>
     <main>
         <section id="vlog-list">
-            <!-- Vlogs will be dynamically added here -->
+            <a href="Vlogs Volume 1.html">Vlogs Volume 1</a>
         </section>
         <section id="vlog-editor" style="display: none;">
             <form id="vlog-form">
