Update Vlogs Volume 1.html

--- a/Vlogs Volume 1.html
+++ b/Vlogs Volume 1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Vlog Post</title>
+    <title>Test Vlog</title>
     <style>
         /* Add your CSS styles here */
     </style>
@@ -14,14 +14,15 @@
     <main>
         <article>
             <h2>Vlog Content</h2>
-            <p>This is where the content of your vlog will go.</p>
+            <p>This is a test for the youtube video embed.</p>
             <div>
-                <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID" frameborder="0" allowfullscreen></iframe>
+                <iframe width="560" height="315" src="https://www.youtube.com/embed/AYPeLKujbaA" frameborder="0" allowfullscreen></iframe>
             </div>
         </article>
     </main>
     <footer>
-        <p>© 2024 Your Name</p>
+        <a href="index.html">Back to Home</a>
+        <p>© 2024 Edoardo De Celis</p>
     </footer>
 </body>
 </html>
