--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
     <title>My Vlog Page</title>
     <style>
-        /* Add your CSS styles here */
+        body {
+            background-color: #11100f;
+            font-family: 'Bahnschrift', sans-serif;
+        }
+        /* Add CSS styles here */
     </style>
 </head>
 <body>
