--- a/Vlogs Volume 1.html
+++ b/Vlogs Volume 1.html
@@ -9,6 +9,7 @@
         body {
             background-color: #11100f;
             font-family: 'Bahnschrift', sans-serif;
+            color: white;
         }
         /* Add CSS styles here */
     </style>
