--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
             background-color: #11100f;
             font-family: 'Bahnschrift', sans-serif;
             color: white;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
         }
         /* Add CSS styles here */
     </style>
