--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <main>
         
         <section id="vlog-list">
-            <a href="Vlogs Volume 1.html">Vlogs Volume 1</a>
+            <a href="Band_Eins.html">Vlogs Volume 1</a>
         </section>
         
         <section id="vlog-editor" style="display: none;">
