--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
             justify-content: center;
             height: 100vh;
             margin: 0;
-        }
+            }
+
+            img {
+            width: 50%; /* You can adjust this value to scale the image */
+            height: auto; /* This will maintain the aspect ratio of the image */
+            }
         /* Add CSS styles here */
     </style>
     
