--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <main>
         
         <section id="vlog-list">
-            <a href="Band_Eins.html">Vlogs Volume 1</a>
+            <a href="Band_Eins.html">Vlog Test 1</a>
         </section>
         
         <section id="vlog-editor" style="display: none;">
