--- a/index.html
+++ b/index.html
@@ -22,6 +22,27 @@
             width: 20%; /* You can adjust this value to scale the image */
             height: auto; /* This will maintain the aspect ratio of the image */
             }
+        
+        a.button {
+            display: inline-block;
+            padding: 10px 20px;
+            color: white;
+            background-color: #007BFF;
+            text-decoration: none;
+            border-radius: 5px;
+            margin: 10px 0;
+            transition: background-color 0.3s ease;
+            }
+
+        a.button:hover {
+            background-color: #0056b3;
+            }
+
+        a.button svg {
+            margin-right: 10px;
+            vertical-align: middle;
+            }
+
         /* Add CSS styles here */
     </style>
     
